# some_exercises

./: .gitignore  README.md
image_process/src/line_follower/: CMakeLists.txt  package.xml
image_process/src/line_follower/include/line_follower/: level1.hpp  level2.hpp  webotsInterface.hpp
image_process/src/line_follower/launch/: webots1.launch  webots2_1.launch  webots2_2.launch
image_process/src/line_follower/src/: level1.cpp  level2.cpp  main.cpp  test_opencv.cpp  webotsInterface.cpp
image_process/src/line_follower/worlds/: .level2_1.wbproj
image_process/src/line_follower/worlds/tiles/: .tianbot_mini_webots.wbproj
image_process/src/webots_ros/worlds/: .keyboard_teleop.wbproj  .pioneer3at.wbproj
learn_c++_primer/1/: add_Sales_item.cpp  book_store.cpp  out  read_input.cpp
learn_c++_primer/10/: insert_iterator.cpp  iostream_iterator.cpp  lambda.cpp  o.out  reverse_iterator.cpp
learn_c++_primer/2/: add_two_sales_data.cpp  out
learn_c++_primer/2/include/: Sales_data.hpp
learn_c++_primer/3/: a.out  out  read_string_cin.cpp  read_string_getline.cpp  read_vector_int.cpp  remove_punctuation.cpp  vector_sum_neighbors.cpp  vector_sum_neighbors_iter.cpp
learn_c++_primer/6/: char_number.cpp  fact.cpp  fact_main.cpp  has_upper.cpp  out  swap_pointer.cpp  swap_reference.cpp  use_argc_argv.cpp
learn_c++_primer/6/include/: fact_head.hpp
learn_c++_primer/8/: fstream_demo.cpp  fstream_demo.txt  fstream_demo2.cpp  out
stm32_projects/test_uart/: CMakeLists.txt  README.md
stm32_projects/test_uart/src/: test_serial_jitter.cpp  test_serial_latency.cpp
stm32_projects/test_uart/utils/: CMakeLists.txt
stm32_projects/test_uart/utils/include/utils/: logger_config.h  real_time.h
stm32_projects/test_uart/utils/src/: real_time.cc
test_cpptime/: CMakeLists.txt  logger_config.cc  main.cpp
test_lcm/: CMakeLists.txt
test_lcm/1_first_program/: CMakeLists.txt  example_t.lcm
test_lcm/1_first_program/src/: publisher.cpp  subscriber.cpp
test_lcm/2_test_latency/: CMakeLists.txt  test_latency.lcm
test_lcm/2_test_latency/latency_lcm/: test_latency.hpp
test_lcm/2_test_latency/src/: test_latency_publisher.cpp  test_latency_subscriber.cpp
test_lcm/3_compare_with_ROS2/: CMakeLists.txt
test_lcm/3_compare_with_ROS2/src/: test_latency_publisher_ros2.cpp  test_latency_subscriber_ros2.cpp
test_lcm/utils/: CMakeLists.txt
test_lcm/utils/include/utils/: logger_config.h
test_lcm/utils/src/: logger_config.cc
test_matplotlibcpp/: CMakeLists.txt
test_matplotlibcpp/src/: 1_first_program.cpp  2_test_animation.cpp
test_rbdl/: CMakeLists.txt  tem.cpp
test_rbdl/1.first_program/: CMakeLists.txt
test_rbdl/1.first_program/src/: 1.first_program.cpp
test_rbdl/2.read_urdf/: CMakeLists.txt
test_rbdl/2.read_urdf/src/: 2.read_urdf.cpp
test_rbdl/3.pendulum/: CMakeLists.txt
test_rbdl/3.pendulum/model/: meshup.csv
test_rbdl/3.pendulum/src/: 3.pendulum.cpp
test_rbdl/4.constrained_double_pendulum/: CMakeLists.txt
test_rbdl/4.constrained_double_pendulum/model/: meshup.csv
test_rbdl/4.constrained_double_pendulum/src/: 4.constrained_double_pendulum.cpp
test_rbdl/5.test_kinematics/: CMakeLists.txt
test_rbdl/5.test_kinematics/model/: 2dof_arm.lua  meshup.csv
test_rbdl/5.test_kinematics/src/: 5.test_fk.cpp  5.test_ik.cpp
test_rbdl/6.learn_lua_model/: CMakeLists.txt
test_rbdl/6.learn_lua_model/model/: example.lua  general.lua
test_rbdl/6.learn_lua_model/reference/: Untitled-1.md
test_rbdl/6.learn_lua_model/src/: 6.read_lua.cpp
test_rbdl/7.four_bar_linkage/: CMakeLists.txt
test_rbdl/7.four_bar_linkage/model/: four_bar_linkage.lua  test_ik_constraint.lua
test_rbdl/7.four_bar_linkage/src/: 7.four_bar_linkage1.cpp  7.four_bar_linkage2.cpp  7.test_ik_constraint.cpp
test_rbdl/utils/: CMakeLists.txt
test_rbdl/utils/src/: csvtools.cc
